--- a/src/components/Body/Body.module.css
+++ b/src/components/Body/Body.module.css
@@ -8,8 +8,9 @@
 }
 
 .heading {
-  font-weight: 500;
-  font-size: 2.1rem;
+  font-weight: bold;
+  font-size: 2.0rem;
+  font-family: fantasy;
 }
 
 .hide {
