--- a/src/components/Editor/Editor.module.css
+++ b/src/components/Editor/Editor.module.css
@@ -1,7 +1,7 @@
 .container {
-  min-width: 550px;
+  min-width: 80%;
   min-height: 450px;
-  max-width: 750px;
+  max-width: 95%;
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -16,6 +16,7 @@
   gap: 10px;
   overflow-x: auto;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  justify-content: space-between;
 }
 
 .header::-webkit-scrollbar {
@@ -76,8 +77,10 @@
 }
 
 .chips .new {
-  color: #239ce2;
-  font-weight: bold;
+  background-color: #239ce2;
+  color: white;
+  border-radius: 20px;
+  height: 28px;
   letter-spacing: 1px;
   cursor: pointer;
 }
@@ -135,4 +138,17 @@
   align-self: end;
   flex-direction: row;
   display: flex;
+}
+
+.errors {
+  margin: auto;
+  color: rgb(255, 71, 71);
+  font-size: small;
+}
+
+.errors svg{
+  height: 14px;
+  width: 14px;
+  color: rgb(255, 71, 71);
+  padding: auto;
 }
