--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -16,7 +16,7 @@
   color: #000;
   font-size: 3.1rem;
   line-height: 4.1rem;
-  font-weight: bold;
+  font-weight: 500;
   letter-spacing: 1px;
   font-family: fantasy;
 }
